创建题目是否共享； 封装全局API数据接口； 考试详情页初稿；

--- a/exam-vue/src/styles/variable.scss
+++ b/exam-vue/src/styles/variable.scss
@@ -12,6 +12,8 @@ $base-background-color: #f3f4f6;
 //元素色
 $item-background-color: #ffffff;
 
+// header的高度
+$el-header-height: 40px;
 
 // 顶部导航的高度
 $base-tabbar-height: 55px;
